src/objects/EnrollmentResponses__c.object
<CustomObject>
    <description>responses to the questions that are gathered from the inquiry form and potentially the application form.</description>
    <fields>
        <fullName>AnswerQuestion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Answer Question</label>
        <referenceTo>EnrollmentAnswers__c</referenceTo>
        <relationshipLabel>Enrollment Responses</relationshipLabel>
        <relationshipName>EnrollmentResponses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CAREProfile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CARE Profile</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Enrollment Responses</relationshipLabel>
        <relationshipName>EnrollmentResponses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DateAnswered__c</fullName>
        <label>Date Answered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsTestData__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to indicate if the record is a test record</description>
        <label>Is Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Enrollment Responses</relationshipLabel>
        <relationshipName>EnrollmentResponses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NEW_Id__c</fullName>
        <description>A temporary holding field for the new SF ID of this record (person account conversion).</description>
        <label>NEW_Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OLD_Id__c</fullName>
        <description>A temporary holding field for the SF ID of this record, to be used for data migration from a person account org to a non-person account org. Declared as External Id for Upsert operations via the SOAP, REST, or BULK APIs.</description>
        <externalId>true</externalId>
        <label>OLD_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuestionNumber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question Number</label>
        <referenceTo>EnrollmentQuestions__c</referenceTo>
        <relationshipLabel>Enrollment Responses</relationshipLabel>
        <relationshipName>EnrollmentResponses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <formula>QuestionNumber__r.QuestionText__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Question</label>
        <type>Text</type>
    </fields>
    <label>Enrollment Responses</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>DateAnswered__c</columns>
        <columns>QuestionNumber__c</columns>
        <columns>AnswerQuestion__c</columns>
        <columns>Lead__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{DD}{YYYY}-{0000000000}</displayFormat>
        <label>Enrollment Responses Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enrollment Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>